# hostthedocs

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  host_my_docs.py  manage.py  pyproject.toml  run.sh
.github/workflows/: python-package.yml
hostthedocs/: __init__.py  config.py  filekeeper.py  getconfig.py  util.py
hostthedocs/controller/: __init__.py  home.py
hostthedocs/controller/api/v1/: __init__.py
hostthedocs/controller/api/v1/endpoints/: hmfd.py  latest.py
hostthedocs/controller/core/: home.py
hostthedocs/internal/: filekeeper.py
hostthedocs/templates/: base.html
