[tool.poetry]
name = "hostthedocs"
version = "3.0.0"
description = "Makes documentation hosting easy."
authors = ["Rob Galanakis <rob.galanakis@gmail.com>", "onukura <26293997+onukura@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
natsort = "^7.1.1"
six = "^1.16.0"
requests = "^2.26.0"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
gunicorn = "^20.1.0"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
