[tool.poetry]
name = "hostthedocs"
version = "3.0.0"
description = "Makes documentation hosting easy."
authors = ["Rob Galanakis <rob.galanakis@gmail.com>", "onukura <26293997+onukura@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.2"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.2"
natsort = "^7.1.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | \.git
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.streamlit
  | \.gitlab
  | \.pytest_cache
  | doc
  | data
  | tmp
  | log
  | upload
  | dist
)/
'''

[tool.isort]
profile = "black"
src_paths = ["hostthedocs", "tests"]

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true
